install/BPM Enterprise 5.3 YAML files/bpm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "bpm-ingress"
  namespace: bpm
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    # Sticky session duration is 7 days 604800 seconds
    nginx.ingress.kubernetes.io/session-cookie-expires: "604800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "604800"
spec:
  rules:
  - host: arlrh8
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: bpm-service
              port:
                number: 8181
